fix/feat: consistent spacing on loading text (fix #33)

--- a/src/containers/AdminPage.scss
+++ b/src/containers/AdminPage.scss
@@ -1,5 +1,10 @@
 @import '../styles/constants';
 @import '../styles/colors';
+@import '../styles/mixins';
+
+.loading-or-error-page {
+  @include standard-page-wrapper;
+}
 
 .admin-page {
   width: 100%;
